# search_for_tins

./: .gitignore  LICENSE  README.md  pyproject.toml
company_usrlc_scanner/: __init__.py  companies_scanner.py
data/in/: README.md  companies_468.csv  companies_9602.csv
tests/: __init__.py  test_scan_short_list.py
