[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["company_usrlc_scanner"]

[project]
name = "company_usrlc_scanner"
version = "0.1.0"
authors = [
    { name="Vladislav Shubnikov", email="vlad.shubnikov@gmail.com" },
]
description = "Download companies details (in batch mode) using Unified State Registry of Legal Companies (and Individual Entrepreneurs)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "csv",
    "pandas",
    "selenium",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E9", "F", "I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
